[gd_scene load_steps=9 format=3 uid="uid://i1a7ibay4x5f"]

[ext_resource type="Script" uid="uid://bojputnjtyr68" path="res://scripts/playerController.gd" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://bsg4xlcco7jed" path="res://scripts/the_mimic.gd" id="2_g2els"]
[ext_resource type="Script" uid="uid://b6rfxsjx0kpch" path="res://scripts/States/idle_player_state.gd" id="3_qhqgy"]
[ext_resource type="Script" uid="uid://b8q0qwp0551jv" path="res://scripts/States/walking_player_state.gd" id="4_dqkch"]
[ext_resource type="Script" uid="uid://b0p72ss360xso" path="res://scripts/reticle.gd" id="5_qlg0r"]
[ext_resource type="Theme" uid="uid://cv6t6wmo6r1to" path="res://ui/themes/debug_panel.tres" id="6_tuyoq"]
[ext_resource type="Script" uid="uid://clmhie1uh2e77" path="res://scripts/debug_panel.gd" id="7_fjrip"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u8vuu"]

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_3vyb7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_u8vuu")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="StaminaTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="TheMimic" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("2_g2els")
current_state = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="TheMimic"]
script = ExtResource("3_qhqgy")

[node name="WalkingPlayerState" type="Node" parent="TheMimic"]
script = ExtResource("4_dqkch")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Reticle" type="CenterContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_qlg0r")

[node name="Top" type="Line2D" parent="UI/Reticle"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Right" type="Line2D" parent="UI/Reticle"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="Bottom" type="Line2D" parent="UI/Reticle"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="UI/Reticle"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="DebugPanel" type="PanelContainer" parent="UI"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 50.0
theme = ExtResource("6_tuyoq")
script = ExtResource("7_fjrip")

[node name="MarginContainer" type="MarginContainer" parent="UI/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DebugPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="StaminaTimer" to="." method="_on_stamina_timer_timeout"]
